--- a/src/Pages/SignUp/SignUp.scss
+++ b/src/Pages/SignUp/SignUp.scss
@@ -209,4 +209,9 @@ main {
 
 .showErrorMsg {
   display: block;
+  color: red;
+  font-size: 13px;
+  text-align: left;
+  margin-left: 60px;
+  margin-bottom: 20px;
 }
