--- a/src/Pages/ItemDetail/Components/BestItem/BestItem.scss
+++ b/src/Pages/ItemDetail/Components/BestItem/BestItem.scss
@@ -1,7 +1,7 @@
 @import '../../../../Styles/common.scss';
 
-.itemDetail {
-  .bestItem {
+.ItemDetail {
+  .BestItem {
     margin-top: 40px;
     padding-bottom: 40px;
 
