--- a/src/Pages/ItemDetail/Components/ImageView/ImageView.scss
+++ b/src/Pages/ItemDetail/Components/ImageView/ImageView.scss
@@ -1,7 +1,7 @@
 @import '../../../../Styles/common.scss';
 
-.itemDetail {
-  .imageView {
+.ItemDetail {
+  .ImageView {
     width: 50%;
     border: $lightGrayBorder;
     overflow: hidden;
