--- a/src/Pages/ItemDetail/Components/PhotoReview/PhotoReview.scss
+++ b/src/Pages/ItemDetail/Components/PhotoReview/PhotoReview.scss
@@ -1,7 +1,7 @@
 @import '../../../../Styles/common.scss';
 
-.itemDetail {
-  .photoReview {
+.ItemDetail {
+  .PhotoReview {
     border: 1px solid rgba(237, 237, 237, 0.7);
     border-top: 0;
 
