--- a/src/Pages/ItemDetail/Components/DetailViewNav/DetailViewNav.scss
+++ b/src/Pages/ItemDetail/Components/DetailViewNav/DetailViewNav.scss
@@ -1,7 +1,7 @@
 @import '../../../../Styles/common.scss';
 
-.itemDetail {
-  .detailViewNav {
+.ItemDetail {
+  .DetailViewNav {
     position: fixed;
     top: 0px;
     left: 0;
