--- a/src/Pages/ItemDetail/Components/Info/Info.scss
+++ b/src/Pages/ItemDetail/Components/Info/Info.scss
@@ -1,7 +1,7 @@
 @import '../../../../Styles/common.scss';
 
-.itemDetail {
-  .info {
+.ItemDetail {
+  .Info {
     width: 50%;
     padding: 30px 40px;
     border: $lightGrayBorder;
