--- a/src/Pages/ItemDetail/Components/PhotoReview/PopUp/PopUp.scss
+++ b/src/Pages/ItemDetail/Components/PhotoReview/PopUp/PopUp.scss
@@ -1,7 +1,7 @@
 @import '../../../../../Styles/common.scss';
 
-.itemDetail {
-  .popUp {
+.ItemDetail {
+  .PopUp {
     position: fixed;
     top: 0;
     left: 0;
