--- a/src/Pages/SignIn/SignIn.scss
+++ b/src/Pages/SignIn/SignIn.scss
@@ -11,6 +11,7 @@ main {
   .mainContainer {
     width: 580px;
     margin: auto;
+    text-align: center;
 
     .selectLanguage {
       width: 100px;
@@ -85,6 +86,7 @@ main {
 
     .signInOption {
       display: inline-flex;
+      margin: 10px 0 0 40px;
     }
 
     .signInStayBtn {
@@ -112,7 +114,7 @@ main {
     }
 
     .ipSecurity {
-      margin-left: 150px;
+      margin-left: 175px;
       display: flex;
 
       .ipSecurityText {
