ADD: 동적라우팅을 위한 변수 할당 및 정리

--- a/src/Pages/ItemList/ListBox/Item/Item.scss
+++ b/src/Pages/ItemList/ListBox/Item/Item.scss
@@ -86,7 +86,7 @@
       @include flex(space-between, center, null);
       margin-top: 14px;
 
-      .name {
+      #name {
         width: 206px;
         font-size: 13px;
         line-height: 16px;
@@ -117,7 +117,7 @@
     .itemPrice {
       margin-top: 3px;
 
-      .price {
+      #price {
         font-size: 13px;
         line-height: 17px;
         font-weight: bold;
@@ -273,7 +273,7 @@
       @include flex(space-between, center, null);
       margin-top: 14px;
 
-      .name {
+      #name {
         font-size: 13px;
         line-height: 16px;
         font-weight: bold;
@@ -304,7 +304,7 @@
     .itemPrice {
       margin-top: 3px;
 
-      .price {
+      #price {
         font-size: 13px;
         line-height: 17px;
         font-weight: bold;
@@ -458,7 +458,7 @@
       @include flex(space-between, center, null);
       margin-top: 14px;
 
-      .name {
+      #name {
         font-size: 20px; //
         line-height: 28px; //
         font-weight: bold;
@@ -489,7 +489,7 @@
     .itemPrice {
       margin-top: 3px;
 
-      .price {
+      #price {
         font-size: 20px; //
         line-height: 28px; //
         font-weight: bold;
