--- a/src/Pages/ItemList/ListBox/Item/listItemBox.scss
+++ b/src/Pages/ItemList/ListBox/Item/listItemBox.scss
@@ -95,7 +95,7 @@
       top: 60px;
       left: 160px;
 
-      .name {
+      #name {
         font-size: 16px; //
         line-height: 21px; //
         font-weight: bold;
