--- a/src/Pages/Main/MainCeramicAdvertisingBanner/MainCeramicAdvertisingBanner.scss
+++ b/src/Pages/Main/MainCeramicAdvertisingBanner/MainCeramicAdvertisingBanner.scss
@@ -47,6 +47,7 @@
         top: 51%;
         left: 80%;
         background-color: rgba(0, 0, 0, 0.3);
+        transform: scale(1);
         cursor: pointer;
       }
 
